--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "webpack-cli": "^4.6.0"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
     "nodemon": "^2.0.7"
   }
 }
