--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node src/index.js",
     "watch-client": "webpack --mode development --watch",
     "watch-server": "nodemon --watch src",
-    "test": "echo 'No tests setup yet'"
+    "test": "mocha --require @babel/register"
   },
   "repository": {
     "type": "git",
@@ -23,6 +23,7 @@
     "@babel/cli": "^7.13.14",
     "@babel/core": "^7.13.14",
     "@babel/preset-env": "^7.13.12",
+    "@babel/register": "^7.7.4",
     "babel-loader": "^8.2.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -31,6 +32,9 @@
     "webpack-cli": "^4.6.0"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
+    "chai": "^4.3.4",
+    "mocha": "^8.3.2",
     "nodemon": "^2.0.7"
   }
 }
